Add deploy config and session-isolated practice mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=${DB_USERNAME:sa}
 spring.datasource.password=${DB_PASSWORD:}
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=true
+
+# 서버 포트 (PaaS 환경에서는 PORT를 주입하는 경우가 많다)
+server.port=${PORT:8080}
